# alarm-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
example_config/: alarm_sources.json  alarm_templates.json  general.json
src/: alarm.rs  alarm_handler.rs  mail_handler.rs  main.rs  serial_handler.rs
src/apis/: divera_v2.rs  mock_api.rs  mod.rs  telegram.rs  typst.rs
src/config/: alarm_sources.rs  alarm_templates.rs  general.rs  mod.rs
src/mail_parser/: helpers.rs  mock_parser.rs  mod.rs  plaintext_parser.rs  sl_secur_cad.rs
