[package]
name = "alarm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.125"
flume = "0.12.0"
imap = "3.0.0-alpha.15"
mailparse = "0.16.1"
regex = "1.10.6"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
scraper = "0.25.0"
quoted_printable = "0.5.1"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
urlencoding = "2.1.3"
async-trait = "0.1.83"
log = "0.4.22"
chrono = "0.4.38"
fern = "0.7.1"
colored = "3.0.0"
serialport = "4.7.0"
encoding_rs = "0.8.34"