[package]
name = "alarm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.149"
flume = "0.12.0"
imap = "3.0.0-alpha.15"
mailparse = "0.16.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
scraper = "0.25.0"
quoted_printable = "0.5.1"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.89"
log = "0.4.29"
chrono = { version = "0.4.44", features = ["serde"] }
fern = "0.7.1"
colored = "3.1.1"
serialport = "4.8.1"
encoding_rs = "0.8.35"
staticmap = "0.4.2"
